tests/format/link/invalid/elements/target-link-with-sources.bst
kind: stack

depends:
- link-with-sources.bst
